<resources>
    <string name="app_name" translatable="false">APKCocina</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="fav" translatable="false">Fav</string>
    <string name="ajustes">Ajustes</string>
    <string-array name="menu_items">
        <item>"Recetas base"</item>
        <item>"Recetas online"</item>
        <item>"Crear receta"</item>
        <item>¿Qué cocino hoy?</item>
        <item>"Información"</item>
    </string-array>
    <string-array name="tipos">
        <item>"unknown"</item>
        <item>"g"</item>
        <item>"kg"</item>
        <item>mg</item>
        <item>"L"</item>
        <item>"mL"</item>
        <item>"tzas"</item>
        <item>cda</item>
        <item>"cdta"</item>
        <item>"unid"</item>
    </string-array>
    <string name="nombre_y_foto_son_obligatorios">Nombre y foto son obligatorios</string>
    <string name="recetas_online">Recetas Online</string>
    <string name="receta_guardada_en_favoritos">Receta guardada en favoritos</string>
    <string name="receta_borrada_de_favoritos">Receta borrada de favoritos</string>
    <string name="no_se_pudo_guardar_en_favoritos">No se pudo guardar en favoritos</string>
    <string name="no_se_han_encontrado_recetas">No se han encontrado recetas</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="error_en_el_servidor">Error en el servidor</string>
    <string name="error_al_puntuar">Error al puntuar</string>
    <string name="inicie_sesion_para_esta_funcionalidad">Inicie sesion para esta funcionalidad</string>
    <string name="error_al_cargar_la_foto">Error al cargar la foto</string>
    <string name="se_requiere_validar_la_cuenta">Se requiere validar la cuenta</string>
    <string name="default_cumpleanos">00/00/0000</string>
    <string name="correo">Correo</string>
    <string name="contrasena_antigua">Contraseña anterior</string>
    <string name="contrasena_nueva">Contraseña nueva</string>
    <string name="contrasena">Contraseña</string>
    <string name="ha_olvidado_su_contrasena">¿Ha olvidado su contraseña?</string>
    <string name="confirmar_contrasena">Confirmar contrasena</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?\nRegístrate aquí</string>
    <string name="se_enviara_un_correo_para_reestablecer_la_contrasena">Se enviará un correo para restablecer\nla contraseña</string>
    <string name="se_ha_enviado_un_correo_a_tu_email_para_reestablecer_la_contrasena">Se ha enviado un correo a tu email, para reestablecer la contraseña</string>
    <string name="reestablecer_contrasena">Reestablecer contraseña</string>
    <string name="enviado">Enviado</string>
    <string name="enviar">Enviar</string>
    <string name="chef">Chef</string>
    <string name="curioso">Curioso</string>
    <string name="contrasena_demasiado_corta">Contraseña demasiado corta</string>
    <string name="contrasena_debe_incluir_al_menos_una_mayuscula">Contraseña debe incluir al menos una mayúscula</string>
    <string name="contrasena_debe_incluir_al_menos_un_caracter_especial">Contraseña debe incluir al menos un carácter especial</string>
    <string name="escribe_un_email_valido">Escribe un email valido</string>
    <string name="email_o_contrasena_no_validos">Email o contraseña no válidos</string>
    <string name="email_no_es_valido">Email no válido</string>
    <string name="contrasena_no_es_valida">Constraseña no válida:</string>
    <string name="debe_contener_una_mayuscula">*Debe contener al menos una mayúscula</string>
    <string name="debe_contener_un_numero">*Debe contener al menos un dígito</string>
    <string name="debe_tener_minimo_seis_caracteres">*Debe contener una longitud mínima de 6</string>
    <string name="usuario_no_existe">Usuario no existe, regístrate</string>
    <string name="error_login">Error al intentar hacer login</string>
    <string name="error_register">Error al intentar registrarse</string>
    <string name="se_ha_enviado_un_email_de_verificacion_a_tu_correo">Se ha enviado un email de verificación a tu correo</string>
    <string name="cuenta_no_verificada_se_ha_enviado_un_email_de_verificacion_a_tu_correo">Cuenta no verificada,se ha enviado un email de verificación a tu correo</string>
    <string name="verificacion_con_exito">Verificación con éxito</string>
    <string name="error_default">Ha ocurrido un error</string>
    <string name="error_al_autentificar_el_usuario">Error al autentificar el usuario</string>
    <string name="error_update_profile">No se ha podido actualizar el usuario, inténtelo más tarde</string>
    <string name="no_se_ha_podido_recoger_informacion_del_usuario">No se ha podido recoger información del usuario</string>
    <string name="cuenta_ya_existente_inicie_sesion">Cuenta ya existente, inicie sesión</string>
    <string name="cuenta_no_existente">La cuenta con este correo no existe</string>
    <string name="ha_ocurrido_un_error_en_la_red_vuelve_a_intentarlo_mas_tarde">Ha ocurrido un error en la red, vuelve a intentarlo más tarde</string>
    <string name="hubo_un_problema_al_verificar_la_cuenta">Hubo un problema al verificar la cuenta</string>
    <string name="has_agotado_los_intentos_prueba_mas_tarde">Has agotado los intentos, prueba más tarde</string>
    <string name="has_agotado_los_intentos_para_autentificarte">Has agotado los intentos para autentificarte</string>
    <string name="has_agotado_los_intentos_para_cambiar_la_contrasena">Has agotado los intentos para cambiar de contraseña</string>
    <string name="verificando">Verificando...</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="edad">Edad</string>
    <string name="mis_recetas">Mis recetas</string>
    <string name="register">Registro</string>
    <string name="las_contrasena_deben_coincidir">Las contraseñas deben coincidir</string>
    <string name="recetas_base">Recetas Base</string>
    <string name="idioma">Idioma</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="seguro_desea_cerrar_sesion">¿Seguro que desea cerrar su sesión?</string>
    <string name="ayuda">Ayuda</string>
    <string name="compartir">Compartir</string>
    <string name="informacion">Información</string>
    <string name="mira_esta_increible_apk_de_cocina">¡Mira esta increíble aplicación de cocina!</string>
    <string name="te_recomiendo_esta_apk">¡Te recomiendo esta aplicación</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="favoritos">Favoritos</string>
    <string name="sin_descripcion">Sin descripción</string>
    <string name="crear_receta">Crear Receta</string>
    <string name="unkown" translatable="false">…</string>
    <string name="usuario_no_logeado">Usuario no logueado</string>
    <string name="receta_creada_con_exito">Receta añadido con éxito</string>
    <string name="error_al_crear_la_receta">Error al crear la receta</string>
    <string name="que_cocino_hoy">¿Qué cocino hoy?</string>
    <string name="adivina_que_receta_nueva_podrias_cocinar_hoy">Adivina que receta nueva\npodrías cocinar hoy</string>
    <string name="debes_iniciar_sesion">Debes iniciar sesión</string>
    <string name="no_has_creado_ninguna_receta_todavia">No has creado ninguna receta todavía</string>
    <string name="ayuda_general"><![CDATA[
    <!DOCTYPE html>
            <html>
                <head>
                  <meta charset="UTF-8">
                  <style>
                    a {
                      text-decoration:none;
                      margin-right: 25px;
                    }
                    strong {
                      font-size: 14pt;
                    }
                  </style>
                </head>
                <body>
                    <p style="text-align: center;">
                        <center><img src="https://lh7-us.googleusercontent.com/KTJipiBI4ddgpFQsDdq71tBZY6-GWweR8mNvReXonkPJc-Xl6SsUF52CgelPWnJOsCh7o8MytJgtlJRjJEuq4o47sUGmutWBBpyV4Krcw-4FiBD-NH2yOQKQReZA-qhfYLYGRHlYqq0BRTZrpKinz6M" width="239" height="239"></center>
                    </p>

                    <p style="margin:20px 0px 0px 20px;">Esta aplicación actualmente no soporta servicio técnico, si tiene algún problema siempre puedes <strong>contactar</strong> con nosotros mediante nuestras <strong>redes sociales</strong> o incluso por el <strong>correo</strong> que se adjunta. Sentimos cualquier molestia ocasionada.</p>

                    <p><br></p>

                    <center>
                       <p>
                        <a href="https://www.instagram.com">
                            <img class="imgMargin" src="https://lh7-us.googleusercontent.com/byePYu1-pSjNJlImV5XmPq-3luyPH17nbpU5xPSu-0EGefc7biUuMimeLL4Ta1oBHy4410L4vDg_YyeumjIahk3U5u4Fjli1vfAb1RWH2fDBTcdY7d1hM7QmG6QqHznP9sffZOZR6AZXXpKe5wYqMnU" width="55" height="55">
                        </a>
                        <a href="https://www.twitter.com">
                            <img class="imgMargin" src="https://lh7-us.googleusercontent.com/FUeR89zUHHAJSGcebF8GDSsjCgjlX7t5xzGmBvtYRWp18UqeULxdyB_Fp_su4XCrbEeNUbYhjj9mE2Bul4ZltrTxt7a_f6qsvIr9M50uhQFiXFSaNR6iXYiZh6g5Ee-MorhxG_C9YFRFZupbOsg2BhE" width="50" height="50">
                        </a>
                        <a href="https://www.github.com">
                            <img class="imgMargin" src="https://lh7-us.googleusercontent.com/dsFX6QCY_VXRQW2e2VTB37U8HVjIAyhhflEhD0cqhdVLleiypoKDZQ0pWU64cJgJgYWowvw-34yAAo3LgceUDDwv-9a6liD90MG3G4OyUTpXX0pVBCQW9JFcNbcdgg6K1tvvJxg1G01hbe8P-TicxpY" width="55" height="55">
                        </a>
                        <a style="margin-right:0;" href="mailto:apkcocina@gmail.com?subject=Asunto&body=Cuerpo del mensaje">
                            <img class="imgMargin" src="https://lh7-us.googleusercontent.com/bFYj08FNQne1YJ0Np0DvBfw7v1NDwanvE0pwra6xSCMiv4sk4l0T8W6pKlM5dEVUoM9sgdACkDUluf2ERmKRTnCNfc9Bgb3EdA1mEg8e6CZ5Fc66Tn0JUbxf9J3-7h8FeLUPqFHSa-d4rq0lsdxa2cM" width="53" height="55">
                        </a>
                    </p>
                   </center>
                </body>
            </html>
    ]]>
    </string>
    <string name="alergenos">Alérgenos</string>
    <string name="huevos">Huevos</string>
    <string name="manual">Manual</string>
    <string name="alergeno_seleccionado">Alérgeno seleccionado</string>
    <string name="alergeno_no_seleccionado">Alérgeno no seleccionado</string>
    <string name="anadir_producto">Añadir producto</string>
    <string name="anadir_texto">Añadir texto</string>
    <string name="anadir_imagen">Añadir imagen</string>
    <string name="habilitar_borrar">Habilitar borrar</string>
    <string name="deshabilitar_borrar">Deshabilitar borrar</string>
    <string name="borrar_elemento">Borrar elemento</string>
</resources>