<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/base_4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_idioma"
        style="@style/MaterialButtonAjustes"
        android:layout_marginTop="50dp"
        android:text="@string/idioma"
        app:backgroundTint="#A2C8CC"
        app:icon="@drawable/ic_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_iniciar_sesion"
        style="@style/MaterialButtonAjustes"
        android:layout_marginTop="50dp"
        android:text="@string/iniciar_sesion"
        app:backgroundTint="#CFE0C5"
        app:icon="@drawable/ic_iniciar_sesion"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_ayuda"
        style="@style/MaterialButtonAjustes"
        android:layout_marginTop="50dp"
        android:text="@string/ayuda"
        app:backgroundTint="#F7CAC9"
        app:icon="@drawable/ic_ayuda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/bt_idioma" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_compartir"
        style="@style/MaterialButtonAjustes"
        android:layout_marginTop="50dp"
        android:text="@string/compartir"
        app:backgroundTint="#C5E0DC"
        app:icon="@drawable/ic_compartir"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_iniciar_sesion"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_informacion"
        android:layout_width="0dp"
        style="@style/MaterialButtonAjustes"
        android:layout_marginTop="50dp"
        android:text="@string/informacion"
        app:backgroundTint="#F6F4B0"
        app:icon="@drawable/ic_informacion"
        app:layout_constraintStart_toStartOf="@id/bt_ayuda"
        app:layout_constraintEnd_toEndOf="@id/bt_compartir"
        app:layout_constraintTop_toBottomOf="@id/bt_ayuda"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_version"
        android:textSize="20sp"
        android:fontFamily="@font/rasa_regular"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
       tools:text="V1.2.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>