<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_2">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/apkcocina_logo"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_correo_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/correo"
                android:textColor="@color/black_soft"
                style="@style/FormTextInputLayout"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/iv_login_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_correo_login"
                    style="@style/FormEditText"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_contrasena_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/contrasena"
                android:textColor="@color/black_soft"
                style="@style/FormTextInputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/base_6"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/il_correo_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_contrasena_login"
                    style="@style/FormEditText"
                    android:imeOptions="actionDone"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_iniciar_sesion"
                android:text="@string/iniciar_sesion"
                android:backgroundTint="@color/background_button_enabled_selector"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/il_contrasena_login"
                style="@style/ProfileButtons"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_registrarse"
                android:text="@string/registrarse"
                android:backgroundTint="@color/base_4"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/bt_iniciar_sesion"
                style="@style/ProfileButtons"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_todavia_no_estas_registrado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/no_tienes_cuenta"
                android:textColor="@color/black_soft"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/bt_registrarse" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_si_ha_olvidado_su_contrasena"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ha_olvidado_su_contrasena"
                android:textColor="@color/purple_700"
                app:layout_constraintTop_toBottomOf="@id/tv_todavia_no_estas_registrado"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/guideline3"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.085158154" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>